--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "/"
+baseURL = "https://emanlapig.net/"
 theme = "hugo-apero"
 languageCode = "en"
 title = "Personal website of Enrico Manlapig"
