--- a/config.toml
+++ b/config.toml
@@ -33,7 +33,7 @@ enableEmoji = true
   description = "Personal site of Enrico Manlapig"
   favicon = "/img/favicon.ico"
   logo = "/img/icon.png"
-  mainSections = ["blog", "project", "talk"]
+  mainSections = ["blog", "project", "noodlings"]
   navallcaps = true
   # show/hide social icons in site header & footer
   # configure social icons and links below in [[params.social]]
