--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ languageCode = "en"
 title = "Personal website of Enrico Manlapig"
 author = "Enrico Manlapig"
 copyright = "" # set to override the auto generated copyright using org info and now year
-googleAnalytics = "G-VZG6E8Z6M0"
+googleAnalytics = "G-4SBC2H50Q8"
 disqusShortname = ""
 metaDataFormat = "yaml"
 footnoteReturnLinkContents = "&#8617;" # ↩
